add pattern for generate create user in swwago
